@@ -362,7 +362,7 @@ public class NativeHandler {
 	
 	// decode methods
 	protected static Byte decodeByte( byte[] b ) {
-		return new Byte( b[0] );
+		return Byte.valueOf(b[0]);
 	}
 	
 	protected static Boolean decodeBoolean( byte[] b ) {
@@ -371,15 +371,15 @@ public class NativeHandler {
 	}
 	
 	protected static Integer decodeInteger( byte[] b ) {
-		return new Integer( toInt( b ) );
+		return Integer.valueOf(toInt(b));
 	}
 	
 	protected static Long decodeLong( byte[] b ) throws Exception {
-		return new Long( toLong( b ) );
+		return Long.valueOf(toLong(b));
 	}
 	
 	protected static Character decodeCharacter( byte[] b ) {
-		return new Character( (char)decodeInteger( b ).intValue() );
+		return Character.valueOf( (char)decodeInteger( b ).intValue() );
 	}
 	
 	protected static String decodeString( byte[] b ) throws Exception {
@@ -396,7 +396,7 @@ public class NativeHandler {
 	}
 	
 	protected static Short decodeShort( byte[] b ) throws Exception {
-		return new Short( (short)decodeInteger( b ).intValue() );
+		return Short.valueOf((short)decodeInteger(b).intValue());
 	}
 	
 	protected static Double decodeDouble( byte[] b ) throws Exception {
