@@ -1,9 +1,9 @@
 /*
-© Copyright 2006- 2007 Apple Computer, Inc. All rights reserved.
+Â© Copyright 2006- 2007 Apple Computer, Inc. All rights reserved.
 
-IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. (ÒAppleÓ) in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
+IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. ("Apple") in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
 
-In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under AppleÕs copyrights in this original Apple software (the ÒApple SoftwareÓ), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
+In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple's copyrights in this original Apple software (the "Apple Software"), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
 
 The Apple Software is provided by Apple on an "AS IS" basis.  APPLE MAKES NO WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION THE IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, REGARDING THE APPLE SOFTWARE OR ITS USE AND OPERATION ALONE OR IN COMBINATION WITH YOUR PRODUCTS. 
 
@@ -34,13 +34,13 @@ public class StatsUtilities extends Object  {
             if (aStatsDict != null) {
                 try {
                     String aValue = (String) aStatsDict.valueForKey("transactions");
-                    aTotalTrans = aTotalTrans + (new Integer(aValue)).intValue();
+                    aTotalTrans = aTotalTrans + Integer.parseInt(aValue);
                 } catch (Throwable ex) {
                     // do nothing
                 }
             }
         }
-        return new Integer(aTotalTrans);
+        return Integer.valueOf(aTotalTrans);
     }
 
 
@@ -57,13 +57,13 @@ public class StatsUtilities extends Object  {
             if (aStatsDict != null) {
                 try {
                     String aValue = (String) aStatsDict.valueForKey("activeSessions");
-                    aTotalActiveSessions = aTotalActiveSessions + (new Integer(aValue)).intValue();
+                    aTotalActiveSessions = aTotalActiveSessions + Integer.parseInt(aValue);
                 } catch (Throwable ex) {
                     // do nothing
                 }
             }
         }
-        return new Integer(aTotalActiveSessions);
+        return Integer.valueOf(aTotalActiveSessions);
     }
 
 
@@ -82,7 +82,7 @@ public class StatsUtilities extends Object  {
             if (aStatsDict != null) {
                 try {
                     String aValue = (String)aStatsDict.valueForKey("transactions");
-                    Integer aTrans = new Integer(aValue);
+                    Integer aTrans = Integer.valueOf(aValue);
 
                     if (aTrans.intValue() > 0) {
                         aValue = (String)aStatsDict.valueForKey("avgTransactionTime");
@@ -119,7 +119,7 @@ public class StatsUtilities extends Object  {
             if (aStatsDict != null) {
                 try {
                     String aValue = (String)aStatsDict.valueForKey("transactions");
-                    Integer aTrans = new Integer(aValue);
+                    Integer aTrans = Integer.valueOf(aValue);
 
                      if (aTrans.intValue() > 0) {
                          String idleString = (String)aStatsDict.valueForKey("averageIdlePeriod");
@@ -156,7 +156,7 @@ public class StatsUtilities extends Object  {
             if (aStatsDict != null) {
                 aStartDate = (String)aStatsDict.valueForKey("startedAt");
                 try {
-                    aTrans = new Integer( (String) aStatsDict.valueForKey("transactions") );
+                    aTrans = Integer.valueOf((String) aStatsDict.valueForKey("transactions"));
                 } catch (Throwable ex) {
                     aTrans = null;
                 }
