@@ -3,7 +3,6 @@ package er.reporting;
 import com.webobjects.appserver.*;
 import com.webobjects.foundation.*;
 
-import er.extensions.*;
 import er.extensions.foundation.ERXValueUtilities;
 import er.grouping.*;
 
@@ -84,7 +83,7 @@ public class WRAttributeGroup extends WOComponent  {
 
 
     public NSArray attributeListAtDepth() {
-        Number ky = new Integer(depth);
+        Number ky = Integer.valueOf(depth);
         return (NSArray)this.attributeListDict().objectForKey(ky);
     }
 
